--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,15 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>9.0.44</version>
+		</dependency>
 	</dependencies>
 
 	<build>
