--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,16 @@
 			<artifactId>tomcat-embed-core</artifactId>
 			<version>9.0.44</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
